2008-10-27  Jim Evins  <evins@snaught.com>

	* data/templates/avery-us-templates.xml:
	* data/templates/misc-iso-templates.xml:
	* data/templates/zweckform-iso-templates.xml:
		Caught up on user submitted templates.
	* AUTHORS:
		Acknowledgements for above templates.

2008-10-23  Jim Evins  <evins@snaught.com>

	* src/label-text.c: (set_font_family):
	* src/object-editor-text-page.c:
	(gl_object_editor_prepare_text_page),
	(gl_object_editor_set_font_family):
	* src/prefs-dialog.c: (construct_object_page),
	(update_object_page_from_prefs):
	* src/ui-property-bar.c: (gl_ui_property_bar_construct),
	(reset_to_default_properties):
	* src/util.c: (gl_util_get_font_family_list):
	* src/util.h:
		Bug #1902275 and Bug #2186214.  Cache font list so that it is not re-created
		everytime the list is requested.
	* src/object-editor-text-page.c:
	(gl_object_editor_set_font_family):
		Don't change font-family if it hasn't actually changed.

2008-10-19  Jim Evins  <evins@snaught.com>

	* data/builder/object-editor.glade:
		Some tweaking of builder/glade widgets.
	
2008-10-18  Jim Evins  <evins@snaught.com>

	Migrated all use of libglade to GtkBuilder.

	* data/glade/Makefile.am:
	* data/glade/merge-properties-dialog.glade:
	* data/glade/new-label-dialog.glade:
	* data/glade/object-editor.glade:
	* data/glade/prefs-dialog.glade:
	* data/glade/print-custom-widget.glade:
	* data/glade/property-bar.glade:
	* data/glade/template-designer.glade:
	* data/glade/wdgt-media-select.glade:
		Removed data/glade directory.
	* data/builder/Makefile.am:
	* data/builder/merge-properties-dialog.glade:
	* data/builder/new-label-dialog.glade:
	* data/builder/object-editor.glade:
	* data/builder/prefs-dialog.glade:
	* data/builder/print-custom-widget.glade:
	* data/builder/property-bar.glade:
	* data/builder/template-designer.glade:
	* data/builder/wdgt-media-select.glade:
		Added data/builder directory.
	* configure.in:
	* data/Makefile.am:
	* src/Makefile.am:
		Change glade to builder.