@@ -1,3 +1,8 @@
+2008-11-09  Jim Evins  <evins@snaught.com>
+
+	* data/templates/misc-iso-templates.xml:
+		Another user submitted template.
+
 2008-10-27  Jim Evins  <evins@snaught.com>
 
 	* data/templates/avery-us-templates.xml:
